# ibus

./: Makefile.am  configure.ac  ibus-1.0.pc.in  ibus.spec.in  meson-dist.py  meson.options
.github/workflows/: main.yml
bindings/vala/: IBus-1.0-custom.vala  IBusFontSet-1.0.metadata  Makefile.am  gkbd.deps
bus/: Makefile.am  component.c  component.h  dbusimpl.c  engineproxy.c  engineproxy.h  ibusimpl.c  ibusimpl.h  inputcontext.c  inputcontext.h  main.c  org.freedesktop.portal.IBus.service.in  panelproxy.c  panelproxy.h  registry.c  registry.h  server.c  server.h  test-matchrule.c
client/: Makefile.am
client/fbterm/: Makefile.am  fbio.c  fbio.h  fbkey.c  fbkey.h  fbshell.c  fbshell.h  fbshellman.c  fbshellman.h  fbterm.c  fbterm.h  fbtty.c  fbtty.h  ibus-fbterm-launch  ibusfbcontext.c  ibusfbcontext.h  inputcontext.c  inputcontext.h  keymap.h  keyobject.c
client/gtk2/: ibusimcontext.c
client/wayland/: Makefile.am  ibuswaylandim.c  input-method-unstable-v1-client-protocol.h  input-method-unstable-v1-protocol.c  main.c
client/x11/: main.c
conf/dconf/: dconf.xml.in
conf/gconf/: gconf.xml.in
conf/memconf/: memconf.xml.in
data/: Makefile.am  ibus.schemas.in  ibus.schemas.in.in
engine/: Makefile.am  main.vala  simple.xml.in
ibus/: Makefile.am  __init__.py  _config.py.in  bus.py  cursor.py  engine.py  enginedesc.py  inputcontext.py  panel.py  xkblayout.py.in  xkbxml.py.in
ibus/interface/: iengine.py  iibus.py  iinputcontext.py  ipanel.py
portal/: portal.c
setup/: Makefile.am  enginecombobox.py  enginetreeview.py  main.py  setup.ui  xkbsetup.py
src/: Makefile.am  ibus.h  ibusattribute.h  ibusattrlist.c  ibusattrlistprivate.h  ibusbus.c  ibuscomponent.c  ibuscomponent.h  ibusconfigservice.c  ibusengine.c  ibusengine.h  ibusenginedesc.c  ibusenginedesc.h  ibusenginesimple.c  ibusfactory.c  ibusfactory.h  ibushotkey.c  ibushotkey.h  ibusinputcontext.c  ibusinputcontext.h  ibusmarshalers.list  ibusmessage.c  ibusmessage.h  ibusobservedpath.c  ibuspanelservice.c  ibuspanelservice.h  ibusproxy.c  ibusproxy.h  ibusregistry.c  ibusservice.c  ibusshare.c  ibusshare.h  ibustypes.h  ibusutil.c  ibusutil.h  ibusxkbxml.c  ibusxkbxml.h
src/tests/: Makefile.am  ibus-keypress-fixme.c  ibus-keypress.c  libinput-test.sh.in  testwindow.c  uinput-replay.c
ui/gjs/: Makefile.am  candidatePanel.js  engineAbout.js  indicator.js  languageBar.js  mainGtk.js  menu.js  panel.js  shellEngineAbout.js
ui/gtk/: candidatepanel.py  languagebar.py  panel.py
ui/gtk3/: Makefile.am  candidatepanel.vala  emojier.vala  extension.vala  gkbdlayout.vala.false  gkbdlayout.vala.true  gtkpanel.xml.in  ibusfontset.c  ibusfontset.h  message.vala  panel.vala  switcher.vala  xkblayout.vala
util/IMdkit/: IMdkit.h  Makefile.am  Xi18n.h  i18nIMProto.c  i18nPtHdr.c  i18nX.c
xkb/: Makefile.am  Makefile.am.orig  ibus-engine-xkb-main.c  ibus-engine-xkb-main.h  ibus-simple-engine.c  ibus-simple-engine.h  ibus-xkb-main.c  xkblib.c  xkblib.h  xkbxml.c  xkbxml.h
