# vim:set noet ts=4:
#
# ibus - The Input Bus
#
# Copyright (c) 2007-2011 Peng Huang <shawn.p.huang@gmail.com>
# Copyright (c) 2010-2011 Takao Fujiwara <takao.fujiwara1@gmail.com>
# Copyright (c) 2007-2011 Red Hat, Inc.
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this program; if not, write to the
# Free Software Foundation, Inc., 59 Temple Place, Suite 330,
# Boston, MA  02111-1307  USA

ui_gjs_DATA = \
	candidatePanel.js \
	engineAbout.js \
	indicator.js \
	languageBar.js \
	mainGtk.js \
	menu.js \
	panel.js \
	$(NULL)

ui_gjsdir = $(pkgdatadir)/ui/gjs

